# cpp2-assessment-server

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  ClientConnection.h  Constants.h  Server.h
include/commands/: AbstractCommand.h  CommandFactory.h  CommandMapper.h  CommandName.h
include/commands/implementations/: CloseConnectionCommand.h  DeleteCommand.h  DeleteFileCommand.h  DownloadFileCommand.h  ListDirectoryCommand.h  MakeDirectoryCommand.h  RenameCommand.h  RenameFileCommand.h  ServerInformationCommand.h  UploadFileCommand.h
include/communication/: ClientConnection.h  Server.h
include/filesystem/: FileInfo.h  FileSystemManager.h  FileType.h  FileTypeMapper.h
server/: CMakeLists.txt
server/include/: Application.h  Constants.h
server/include/commands/: CommandFactory.h  CommandMapper.h
server/include/communication/: ClientConnection.h  Server.h
server/include/filesystem/: FileSystemManager.h  FileTypeMapper.h
server/src/: Application.cpp
server/src/commands/implementations/: CloseConnectionCommand.cpp  MakeDirectoryCommand.cpp  ServerInformationCommand.cpp
server/src/communication/: ClientConnection.cpp  Server.cpp
server/src/filesystem/: FileSystemManager.cpp
server_tests/: CMakeLists.txt  TestClientFixture.cpp  TestClientFixture.h  TestServerConnection.cpp  TestServerConnection.h  Tests.cpp
src/: Application.cpp  ClientConnection.cpp  Main.cpp  Server.cpp
src/commands/: CommandFactory.cpp
src/commands/implementations/: CloseConnectionCommand.cpp  DeleteCommand.cpp  DeleteFileCommand.cpp  DownloadFileCommand.cpp  ListDirectoryCommand.cpp  MakeDirectoryCommand.cpp  RenameCommand.cpp  RenameFileCommand.cpp  ServerInformationCommand.cpp  UploadFileCommand.cpp
src/communication/: ClientConnection.cpp  Server.cpp
src/filesystem/: FileInfo.cpp  FileSystemManager.cpp
